<resources>
    <string name="app_name">Furriends</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="already_account_login_here">Already Account ? Login Here</string>
    <string name="email">Email</string>
    <string name="full_name">Full name</string>
    <string name="here">Here</string>
    <string name="sign_up">Sign Up</string>
    <string name="resert_password">Resert Password</string>
    <string name="new_account_sign_up_here">New Account ? Sign Up Here</string>
    <string name="profile">Profile</string>
    <string name="notification">notification</string>
    <string name="location">Location</string>
    <string name="setting">Setting</string>
    <string name="support">Support</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="others">others</string>
</resources>