<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menuProfile"
        android:icon="@drawable/profile_24"
        android:title="@string/profile"  />

    <item
        android:id="@+id/menuNotifications"
        android:icon="@drawable/notifications_24"
        android:title="@string/notification" />

    <item
        android:id="@+id/location"
        android:icon="@drawable/location_on_24"
        android:title="@string/location" />

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/menuSetting"
                android:icon="@drawable/settings_24"
                android:title="@string/setting" />

            <item
                android:id="@+id/menuSupport"
                android:icon="@drawable/support_24"
                android:title="@string/support"  />

        </menu>
    </item>
</menu>